--- a/index.html
+++ b/index.html
@@ -107,20 +107,21 @@
 					<div class="swiper-slide">
 						<img src="./images/worship-1.jpg" alt="" />
 						<div class="text-overlay">
-							<h1>2024's THEME</h1>
-							<h1>JUST</h1>
-							<h1>obey</h1>
+							<h1 class="display-6 title-text">2024's THEME</h1>
+							<h1 class="text-shadow-1 display-2 fw-bold">JUST Obey</h1>
 
-							<p>If you are willing and obedient, you shall eat the best from the land</p>
-							<p>Isaiah 1:19(NIV)</p>
+							<p class="display-8 fw-bold">
+								If you are willing and obedient, you shall eat the best from the land
+							</p>
+							<p class="display-8">Isaiah 1:19(NIV)</p>
 						</div>
 					</div>
 					<div class="swiper-slide">
 						<img src="./images/worship-2.jpg" alt="" loading="lazy" />
 						<div class="text-overlay">
-							<h1>VISIT</h1>
-							<h3>Mt. Carmel Prayer Center</h3>
-							<p>If there is a Man to Pray, there is a God to answer</p>
+							<h1 class="display-6 title-text">VISIT</h1>
+							<h3 class="display-2 fw-bold text-shadow-1">Mt. Carmel Prayer Center</h3>
+							<p class="display-7">If there is a Man to Pray, there is a God to answer</p>
 						</div>
 						<div class="swiper-lazy-preloader"></div>
 					</div>
@@ -243,6 +244,17 @@
 				</div>
 			</section>
 
+			<section class="radio-service">
+				<div class="radio-service__container">
+					<h1 class="radio-service__day">
+						<span class="radio-service__day-name">FRIDAY DAWN</span>
+						<span class="radio-service__day-title">INSPIRATIONAL HOUR</span>
+					</h1>
+					<h2 class="fm">ANGEL FM | 96.1</h2>
+					<h3 class="time">4:00 AM - 5:00 AM</h3>
+				</div>
+			</section>
+
 			<section class="weekly-section">
 				<div class="text-center weekly-text-container">
 					<h2 class="weekly-title">Weekly Service</h2>
@@ -333,17 +345,6 @@
 				</div>
 
 				<!-- End of Swiper JS -->
-			</section>
-
-			<section class="radio-service">
-				<div class="radio-service__container">
-					<h1 class="radio-service__day">
-						<span class="radio-service__day-name">FRIDAY DAWN</span>
-						<span class="radio-service__day-title">INSPIRATIONAL HOUR</span>
-					</h1>
-					<h2 class="fm">ANGEL FM | 96.1</h2>
-					<h3 class="time">4:00 AM - 5:00 AM</h3>
-				</div>
 			</section>
 		</main>
 
